fix(nvim): lsp stuff, and replace git-conflict.nvim by conflict-marker.vim; feat(neomutt): progress

--- a/configs/browser/browser-homepage.html
+++ b/configs/browser/browser-homepage.html
@@ -157,7 +157,7 @@
 					isl: "https://artofproblemsolving.com/community/c3223_imo_shortlist",
 					evanchen: "https://web.evanchen.cc/",
 
-					gmail: "https://gmail.com/",
+					gmail: "https://mail.google.com/",
 				};
 
 				function filterItems(searchText) {
