--- a/configs/browser/browser-homepage.html
+++ b/configs/browser/browser-homepage.html
@@ -13,7 +13,7 @@
 				flex-direction: column;
 				justify-content: center;
 				align-items: center;
-				background: url("homepage-wallpaper.png")
+				background: url("rocket.jpg")
 					no-repeat center center fixed;
 				background-size: cover;
 				font-family: "FiraCode Nerd Font";
