go pack to previous browser homepage background

--- a/configs/browser/browser-homepage.html
+++ b/configs/browser/browser-homepage.html
@@ -13,7 +13,7 @@
 				flex-direction: column;
 				justify-content: center;
 				align-items: center;
-				background: url("rocket.jpg")
+				background: url("homepage-wallpaper.png")
 					no-repeat center center fixed;
 				background-size: cover;
 				font-family: "FiraCode Nerd Font";
@@ -156,8 +156,6 @@
 					imo: "https://artofproblemsolving.com/community/c3222_imo",
 					isl: "https://artofproblemsolving.com/community/c3223_imo_shortlist",
 					evanchen: "https://web.evanchen.cc/",
-
-					gmail: "https://mail.google.com/",
 				};
 
 				function filterItems(searchText) {
